--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: bbdm
+name: dual-bridge
 ## To install pytorch use the following command: 
 ## pip install torch==1.12.1+cu116 torchvision==0.13.1+cu116 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu116
 ## check nvcc --version to know the cuda version installed on your system
